# sc-node

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  azcoin-install.sh  azcoin-seeder-install.sh  bitcoin-feeder-install.sh  bitcoin-install.sh  build-scnode-iso.sh  configure-node.sh  docker-compose.yml  docker-entrypoint.sh  firstboot.sh  late-commands.sh  node-config-example.cfg  package-lock.json  package.json  planning.md  preseed.cfg  progress.md  setup.sh  stratum-install.sh  tailwind.config.js  tpm-auto-unlock.sh  vite.config.js  wireguard-install.sh
master-api/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  install-azcoin-node-api.sh  pyproject.toml  rebuild.ps1  requirements  requirements-dev.txt  requirements.txt
master-api/.github/workflows/: docker.yml
master-api/scripts/: ledger_mvp_probe.py
master-api/tests/: conftest.py  test_alerts.py  test_auth_smoke.py  test_az_blocks.py  test_az_mining.py  test_az_readonly_endpoints.py  test_bitcoin_rpc_auth.py  test_btc_node_info_rpc.py  test_btc_wallet.py  test_dashboard_summary.py  test_events_bus.py  test_health.py  test_ledger_mvp_probe.py  test_metrics_hashrate.py  test_metrics_shares.py  test_miners.py  test_node_info_rpc.py  test_node_summary.py  test_protected.py  test_services_status.py  test_translator.py  test_translator_block_reward_events.py  test_translator_blocks_found.py  test_translator_blocks_found_candidates.py  test_translator_candidate_reconstruction.py  test_tx_send.py  test_version.py
(+241 files in other folders)
