[project]
name = "azcoin-node-api"
version = "0.2.0"
description = "Node-side API service for AZCoin Core (FastAPI)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "pyzmq>=26.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
